Post abouts gatsby

--- a/site/src/@lekoarts/gatsby-theme-minimal-blog/texts/hero.mdx
+++ b/site/src/@lekoarts/gatsby-theme-minimal-blog/texts/hero.mdx
@@ -2,5 +2,4 @@
   Hi.
 </Text>
 
-wwwwI'm Lupin - currently teaching "Defense against the Dark Arts" at Hogwarts, Great Britain. I recently published a book called [Those nasty Dementors](https://www.lekoarts.de).
-It teaches everything you need to know about defending against Dementors.
+This is about Tab Groupie - a browser extension that automates tab groups - and what I picked up along the way.
