--- a/site/src/@lekoarts/gatsby-theme-minimal-blog/texts/hero.mdx
+++ b/site/src/@lekoarts/gatsby-theme-minimal-blog/texts/hero.mdx
@@ -2,4 +2,4 @@
   Hi.
 </Text>
 
-This is about Tab Groupie - a browser extension that automates tab groups - and what I picked up along the way.
+This is about Tab Groupie - a browser extension that automates tab groups - and some bits I picked up along the way.
